# IcePaste

./: CMakeLists.txt  IcePaste.cpp  IcePaste.h  PasteImage.cpp  PasteImage.h  main.cpp  readme.md
